# fftboost

./: .pre-commit-config.yaml  README.md  pyproject.toml  temp_benchmark.py
.github/workflows/: acceptance.yml  ci.yml  notebook_test.yml  release.yml
benchmarks/: gauntlet.py
data/: synthetic_generator.py
examples/: 01_quickstart.ipynb  02_inference_patterns.ipynb  demo_config.yaml
examples/configs/: lean_v3_default.yaml
notebooks/: README.md  fftboost_demo.ipynb
scripts/: ensure_fftboost.py
src/fftboost/: __init__.py  api.py  automl.py  booster.py  boosting.py  cli.py  config.py  cv.py  features.py  heads.py  io.py  losses.py  models.py  scaling.py  temporal_operators.py
src/fftboost/core/: cv.py  features.py  fftboost.py  metrics.py  types.py
src/fftboost/experts/: __init__.py  cepstral_bin.py  clf_bin.py  fft_bin.py  interactions.py  phase_bin.py  shape_props.py  sk_band.py  temporal.py  types.py
src/fftboost/utils/: scaling.py
tests/: test_acceptance.py  test_api.py  test_automl_smoke.py  test_boosting.py  test_cv.py  test_experts_cepstral_bin.py  test_experts_clf_bin.py  test_experts_fft_bin.py  test_experts_interactions.py  test_experts_phase_bin.py  test_experts_shape_props.py  test_experts_sk_band.py  test_experts_temporal.py  test_features.py  test_fft_only_baseline.py  test_fftboost.py  test_gauntlet_lite.py  test_io.py  test_losses.py  test_predict_shapes.py  test_reproducibility.py  test_scaling.py  test_signal_alignment.py  test_synthetic_generator.py
