[project]
name = "fftboost"
version = "1.0.0"
authors = [
  { name="Your Name", email="your@email.com" },
]
description = "A Python library for signal analysis using feature-selecting FFT-based models."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "pywavelets"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "lightgbm",
    "xgboost",
    "catboost",
    "ipykernel"
]
viz = [
    "matplotlib",
    "seaborn"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
known-first-party = ["fftboost"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
strict = true
explicit_package_bases = true
